--- a/index.html
+++ b/index.html
@@ -4,26 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <title>To-do-list</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Document</title>
+    <link rel = "stylesheet" href = "style.css"/>
+    
 </head>
 <body>
-
     <header>
-        <h1>Today To-do-list</h1>
-        <form id = "new-task">
-           
-        <input
-            type = "text"
-            id = "new-input"
-            placeholder = "What is today's plan?"
-        />
-        <input 
-          type = "submit"
-          id = "new-submit"
-          value = "Add task"
-        />
+        <h1>Task List</h1>
+        <form id = "new-form">
+            <input
+               type = "text"
+               id = "new-input"
+               placeholder = "What do you have planned?"/>
+            <input 
+             type = "submit"
+             id = "new-submit"
+             value = "Add task"/>
         </form>
     </header>
     <main>
@@ -47,7 +43,6 @@
             </div>
         </section>
     </main>
-
     <script src = "script.js"></script>
 </body>
 </html>
