--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
         <section class = "task-list">
             <h2>Tasks</h2>
             <div id = "tasks">
-               
+               <input
+                type = "radio"
+            />
             </div>
         </section>
     </main>
