--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <title>Document</title>
     <link rel = "stylesheet" href = "style.css"/>
     <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.no-icons.min.css" rel="stylesheet">
-<link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
+     <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
     
 </head>
 <body>
     <header>
         <h1>Today's Task List</h1>
         <form id = "new-form">
-            <input
+            <input 
                type = "text"
                id = "new-input"
                placeholder = "What do you have planned?"/>
@@ -28,9 +28,12 @@
         <section class = "task-list">
             <h2>Tasks</h2>
             <div id = "tasks">
-               <input
-                type = "radio"
-            />
+            <form id = "check-form">
+                <input
+                    
+                />
+            </form>
+
             </div>
         </section>
     </main>
