--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel = "stylesheet" href = "style.css"/>
-    <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.no-icons.min.css" rel="stylesheet">
-     <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
     
 </head>
 <body>
@@ -28,11 +26,12 @@
         <section class = "task-list">
             <h2>Tasks</h2>
             <div id = "tasks">
-            <form id = "check-form">
+            <!-- <form id = "check-form">
                 <input
-                    
+                    type = "image" 
+                    id = "tick"
                 />
-            </form>
+            </form> -->
 
             </div>
         </section>
